v.overlay manual: figure caption cosmetics
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@65900 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/vector/v.overlay/v.overlay.html
+++ b/vector/v.overlay/v.overlay.html
@@ -106,7 +106,7 @@ d.vect map=v_overlay_AND
 
 <center>
 <img src="v_overlay_op_and.png" alt="v.overlay with AND operator"><br>
-v.overlay with AND operator
+v.overlay with AND operator (selected polygons in grey color)
 </center>
 
 
@@ -121,7 +121,7 @@ d.vect map=v_overlay_OR
 
 <center>
 <img src="v_overlay_op_or.png" alt="v.overlay with OR operator"><br>
-v.overlay with OR operator
+v.overlay with OR operator (selected polygons in grey color)
 </center>
 
 
@@ -136,7 +136,7 @@ d.vect map=v_overlay_XOR
 
 <center>
 <img src="v_overlay_op_xor.png" alt="v.overlay with XOR operator"><br>
-v.overlay with XOR operator
+v.overlay with XOR operator (selected polygons in grey color)
 </center>
 
 
@@ -151,7 +151,7 @@ d.vect map=v_overlay_NOT
 
 <center>
 <img src="v_overlay_op_not.png" alt="v.overlay with NOT operator"><br>
-v.overlay with NOT operator
+v.overlay with NOT operator (selected polygon in grey color)
 </center>
 
 
