make documentation conform to std to radius change in parameter names
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@65926 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/vector/v.kernel/v.kernel.html
+++ b/vector/v.kernel/v.kernel.html
@@ -24,9 +24,9 @@ For the <em>gaussian</em> kernel, standard deviation for the
 is set to 1/4 of the radius.
 <p>
 With the <b>-o</b> flag (experimental) the command tries to calculate an 
-optimal standard deviation. The value of <em>stddeviation</em> is taken 
-as maximum value. Standard deviation is calculated using ALL points, 
-not just those in the current region.
+optimal radius. The value of <em>radius</em> is taken 
+as maximum value. The radius is calculated based on the gaussian function, 
+using ALL points, not just those in the current region.
 
 <h2>LIMITATIONS</h2>
 The module only considers the presence of points, but not 
