d.vect.chart manual: consider v.voronoi for meteo stations (comment)
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@65972 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/display/d.vect.chart/d.vect.chart.html
+++ b/display/d.vect.chart/d.vect.chart.html
@@ -30,6 +30,11 @@ plot if <b>chart_type</b> is <em>bar</em> (See Example 2).
 
 Pie-charts of monthly winter precipitation (North Carolina sample dataset):
 
+<!-- might be good to add this to example:
+v.voronoi input=precip_30ynormals output=precip_stations_voronoi
+d.vect precip_stations_voronoi type=boundary
+-->
+
 <div class="code"><pre>
 g.region vector=nc_state -p
 d.vect nc_state
