r.external manual: added processing workflow example
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@65973 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/raster/r.external/r.external.html
+++ b/raster/r.external/r.external.html
@@ -34,6 +34,30 @@ d.rgb r=ortho.1 g=ortho.2 b=ortho.3
 r.composite r=ortho.1 g=ortho.2 b=ortho.3 output=ortho.rgb
 </pre></div>
 
+<h3>Processing workflow without data import and export</h3>
+
+External raster maps to be processed can be directly linked using <em>r.external</em>;
+likewise, results can be written out to standard raster formats with
+<em>r.external.out</em> (GDAL supported formats):
+
+<div class="code"><pre>
+# register GeoTIFF file to be used in current mapset:
+r.external terra_lst1km20030314.LST_Day.tif out=modis_celsius
+ 
+# define output directory for files resulting from GRASS calculation:
+r.external.out directory=$HOME/gisoutput/ format="GTiff"
+ 
+# perform GRASS calculation (here: extract pixels > 20 deg C)
+# this stores the output map directly as GeoTIFF:
+r.mapcalc "warm.tif = if(modis_celsius > 20.0, modis_celsius, null() )"
+ 
+# cease GDAL output connection and turn back to write GRASS raster files:
+r.external.out -r
+ 
+# now use the result elsewhere
+gdalinfo $HOME/gisoutput/warm.tif
+</pre></div>
+
 <h2>REFERENCES</h2>
 
 GDAL Pages: <a href="http://www.gdal.org">http://www.gdal.org/</a><br>
