v.select manual: fix INTERSECTS caption
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@65976 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/vector/v.select/v.select.html
+++ b/vector/v.select/v.select.html
@@ -136,8 +136,8 @@ d.vect map=boxgrid type=boundary color=50:50:50
 </pre></div>
 
 <center>
-<img src="v_select_op_intersects.png" alt="v.select with OVERLAP operator"><br>
-v.select with OVERLAP operator: selected grid boxes shown in grey
+<img src="v_select_op_intersects.png" alt="v.select with INTERSECTS operator"><br>
+v.select with INTERSECTS operator: selected grid boxes shown in grey
 </center>
 
 
