docs: html changes for unified picture names (for r65996 and r65997)
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@65998 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/raster/r.li/r.li.dominance/r.li.dominance.html
+++ b/raster/r.li/r.li.dominance/r.li.dominance.html
@@ -1,7 +1,7 @@
 <h2>DESCRIPTION</h2>
 
 <em>r.li.dominance</em> calculates the "dominance diversity index" as:<br>
-<img src="rliDominance_formula.png" alt="rliDominance formula"> <br>
+<img src="r_li_dominance_formula.png" alt="rliDominance formula"> <br>
 with:
 <ul>
 <li><b>i</b>: patch type</li>
