--- a/raster/r.li/r.li.edgedensity/r.li.edgedensity.html
+++ b/raster/r.li/r.li.edgedensity/r.li.edgedensity.html
@@ -4,11 +4,11 @@
 <br>
 <ul>
    <li> the density of all edges of patch type <em>k</em>
-	<img alt="rliEdgeDensity formula1" src="rliEdgeDensity_formula1.png">
+	<img alt="r.li.edgedensity formula 1" src="r_li_edgedensity_formula_1.png">
 	, or
    <li> the density of all edges in the sampling area if <em>k</em> is 
         not specified,
-	<img alt="rliEdgeDensity formula2" src="rliEdgeDensity_formula2.png">
+	<img alt="r.li.edgedensity formula 2" src="r_li_edgedensity_formula_2.png">
 </ul>
 <p>with:
 <ul>
