--- a/raster/r.li/r.li.richness/r.li.richness.html
+++ b/raster/r.li/r.li.richness/r.li.richness.html
@@ -2,7 +2,7 @@
 
 <em>r.li.richness</em> calculates the "richness diversity index" as:
 <br>
-<img src="rliRichness_formula.png" alt="r.li.richness formula">
+<img src="r_li_richness_formula.png" alt="r.li.richness formula">
 <br>
 with:
 <ul>
