--- a/raster/r.li/r.li.shannon/r.li.shannon.html
+++ b/raster/r.li/r.li.shannon/r.li.shannon.html
@@ -1,7 +1,7 @@
 <h2>DESCRIPTION</h2>
 
 <em>r.li.shannon</em> calculates the "Shannon's diversity index" as:<br>
-<img src="rliShannon_formula.png" alt="r.li.shannon formula"> <br>
+<img src="r_li_shannon_formula.png" alt="r.li.shannon formula"> <br>
 with:
 <ul>
 <li><b>i</b>: patch type</li>
