--- a/raster/r.li/r.li.simpson/r.li.simpson.html
+++ b/raster/r.li/r.li.simpson/r.li.simpson.html
@@ -1,7 +1,8 @@
 <h2>DESCRIPTION</h2>
 
 <em>r.li.simpson</em> calculates the "Simpson's diversity index" as:<br>
-<img src="rliSimpson_formula.png" alt="r.li.simpson formula"> <br>
+<!-- TODO: here should be the actual formula in alt (same for all r.li) -->
+<img src="r_li_simpson_formula.png" alt="r.li.simpson formula"> <br>
 with:
 <ul>
 <li><b>i</b>: patch type</li>
