--- a/vector/v.to.rast3/v.to.rast3.html
+++ b/vector/v.to.rast3/v.to.rast3.html
@@ -12,7 +12,7 @@ floating point precision.
 
 
 <center>
-<img src="v.to.rast3.test.png" border="0"><br>
+<img src="v_to_rast3_test.png" border="0"><br>
 <table border="0" width="600">
 <tr><td><center>
 <i>This screenshot shows the result of the v.to.rast3 test. Visualized are the cube of the
