--- a/temporal/t.register/t.register.html
+++ b/temporal/t.register/t.register.html
@@ -85,7 +85,7 @@ Register maps in a absolute space time dataset, creating a time interval
 
 <div class="code"><pre>
 t.register -i type=raster input=precipitation_monthly \
-    maps=`g.list rast patt=*precip* sep=,` start=2009-01-01 \
+    maps=`g.list raster pattern="*precip*" sep=comma` start=2009-01-01 \
     increment="1 months"
 </pre></div>
 
