--- a/temporal/t.remove/t.remove.html
+++ b/temporal/t.remove/t.remove.html
@@ -27,7 +27,7 @@ t.create output=precip_months_sum semantictype=mean \
 
 #Register maps from sample dataset (selecting a subset with g.list)
 t.register -i type=raster input=precip_months_sum \
-  maps=$(g.list type=raster pattern=201*_precip separator=comma) \
+  maps=$(g.list type=raster pattern="201*_precip" separator=comma) \
   start="2010-01-01" increment="1 months"
 
 #Create some new data by aggregating with 1 years granularity
