--- a/temporal/t.snap/t.snap.html
+++ b/temporal/t.snap/t.snap.html
@@ -29,7 +29,7 @@ t.create type=strds temporaltype=absolute \
          description="Dataset with monthly precipitation"
 
 t.register type=raster input=precipitation_monthly \
-           maps=`g.list type=raster patt=2012*precip sep=,` \
+           maps=`g.list type=raster pattern="2012*precip" sep=comma` \
            start=2012-01-01 increment="1 months"
 
 # please take attention to "Temporal type of maps" value
