t.rast.aggregate manual: fix t.rast.aggregate call
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@66012 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/temporal/t.rast.aggregate/t.rast.aggregate.html
+++ b/temporal/t.rast.aggregate/t.rast.aggregate.html
@@ -60,7 +60,7 @@ data, running:
 
 <div class="code"><pre>
 t.rast.aggregate in=tempmean_monthly out=tempmean_yearly basename=tempmean_year \
-                 granularity='1 year' method=average
+                 granularity="1 years" method=average
 
 t.support input=tempmean_yearly \
           title="Yearly precipitation" \
