--- a/scripts/r.shade/r.shade.html
+++ b/scripts/r.shade/r.shade.html
@@ -13,8 +13,8 @@ the color raster map, this module gives result with more saturated colors.
 
 <p>
 The input for this module can be created for example using
-<a href="r.slope.aspect.html">r.slope.aspect</a> or
-<a href="r.relief.html">r.relief</a><br>.
+<em><a href="r.slope.aspect.html">r.slope.aspect</a></em> or
+<em><a href="r.relief.html">r.relief</a></em>.
 
 <p>
 NULL values are propagated by default, so if any of the two input rasters
@@ -28,14 +28,14 @@ by the given color.
 
 <h2>NOTES</h2>
 
-Refer to the <a href="r.his.html">r.his</a> help page for more details;
+Refer to the <em><a href="r.his.html">r.his</a></em> help page for more details;
 <em>r.shade</em> is a frontend to that module with addition of
 brightness support similar to one provided by
 <em><a href="d.shade.html">d.shade</a></em>.
 However, note that the brightness is not implemenented in the same way as for
 <em><a href="d.shade.html">d.shade</a></em> and the results might
 be different.
-<em>r.shade</em> is using method described in <a href="r.his.html">r.his</a>
+<em>r.shade</em> is using method described in <em><a href="r.his.html">r.his</a></em>
 manual page.
 
 
