--- a/raster/r.in.lidar/r.in.lidar.html
+++ b/raster/r.in.lidar/r.in.lidar.html
@@ -200,7 +200,7 @@ map. [In this example the user may want to include a lower bound filter in
 <em>r.neighbors</em> to smooth the stddev map before further use.]
 
 
-<h2>EXAMPLE</h2>
+<h2>EXAMPLES</h2>
 
 Import of a LAS file into an existing location/mapset (metric):
 
@@ -211,8 +211,9 @@ g.region raster=lidar_dem_mean -p
 r.univar lidar_dem_mean
 </pre></div>
 
+<h3>Serpent Mound dataset</h3>
+
 <p>
-Serpent Mound dataset:
 This example is analogous to the example used in the GRASS wiki page for
 <a href="http://grasswiki.osgeo.org/wiki/LIDAR#Import_LAS_as_raster_DEM">importing LAS as raster DEM</a>.
 <p>The sample LAS data are in the file "Serpent Mound Model LAS Data.las", 
@@ -239,6 +240,21 @@ g.region n=4323641.57 s=4320942.61 w=289020.90 e=290106.02 res=1 -ap
 r.in.lidar input="Serpent Mound Model LAS Data.las" \
            output=Serpent_Mound_Model_LAS_Data method=mean
 </pre></div>
+
+<h3>Height above ground</h3>
+
+<p>
+Compute mean height above ground of the points for each raster cell
+(ground elevation is given by the raster map <tt>elevation</tt>):
+
+<div class="code"><pre>
+g.region raster=elevation
+r.in.lidar input=points.las output=height_above_ground base_raster=elevation
+</pre></div>
+
+In this type of computation, it might be advantageous to change the resolution
+to match the precision of the points rather then derive it from the base raster.
+
 
 <h2>NOTES</h2>
 The typical file extensions for the LAS format are .las and .laz (compressed). 
