--- a/raster/r.in.lidar/r.in.lidar.html
+++ b/raster/r.in.lidar/r.in.lidar.html
@@ -199,10 +199,16 @@ map. [In this example the user may want to include a lower bound filter in
 <em>r.mapcalc</em> to remove highly variable points (small <em>n</em>) or run
 <em>r.neighbors</em> to smooth the stddev map before further use.]
 
+<h2>NOTES</h2>
+
+The typical file extensions for the LAS format are .las and .laz (compressed). 
+The compressed LAS (.laz) format can be imported only if libLAS has been compiled 
+with laszip support. It is also recommended to compile libLAS with GDAL which is
+used to test if the LAS projection matches that of the GRASS location.
 
 <h2>EXAMPLES</h2>
 
-Import of a LAS file into an existing location/mapset (metric):
+Import of a LAS file into an existing location/mapset (metric units):
 
 <div class="code"><pre>
 # set the computational region automatically, resol. for binning is 5m
@@ -213,12 +219,11 @@ r.univar lidar_dem_mean
 
 <h3>Serpent Mound dataset</h3>
 
-<p>
 This example is analogous to the example used in the GRASS wiki page for
 <a href="http://grasswiki.osgeo.org/wiki/LIDAR#Import_LAS_as_raster_DEM">importing LAS as raster DEM</a>.
 <p>The sample LAS data are in the file "Serpent Mound Model LAS Data.las", 
 available at 
-<a href="http://www.appliedimagery.com/downloads/sampledata/Serpent%20Mound%20Model%20LAS%20Data.las">appliedimagery.com</a>
+<a href="http://www.appliedimagery.com/downloads/sampledata/Serpent%20Mound%20Model%20LAS%20Data.las">appliedimagery.com</a>:
 
 <div class="code"><pre>
 # print LAS file info
@@ -243,24 +248,18 @@ r.in.lidar input="Serpent Mound Model LAS Data.las" \
 
 <h3>Height above ground</h3>
 
-<p>
-Compute mean height above ground of the points for each raster cell
-(ground elevation is given by the raster map <tt>elevation</tt>):
+The mean height above ground of the points can be computed for each
+raster cell (the ground elevation is given by the raster map
+<tt>elevation</tt>):
 
 <div class="code"><pre>
-g.region raster=elevation
+g.region raster=elevation -p
 r.in.lidar input=points.las output=height_above_ground base_raster=elevation
 </pre></div>
 
 In this type of computation, it might be advantageous to change the resolution
-to match the precision of the points rather then derive it from the base raster.
-
-
-<h2>NOTES</h2>
-The typical file extensions for the LAS format are .las and .laz (compressed). 
-The compressed LAS (.laz) format can be imported only if libLAS has been compiled 
-with laszip support. It is also recommended to compile libLAS with GDAL, 
-needed to test for matching projections.
+to match the precision of the points rather than deriving it from the base raster.
+<!-- TODO: say how -->
 
 <h2>TODO</h2>
 
