various typo fixes, found by the Debian lintian QA tool (trac #2725)
git-svn-id: https://svn.osgeo.org/grass/grass/branches/releasebranch_7_0@66111 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/scripts/r.pack/r.pack.html
+++ b/scripts/r.pack/r.pack.html
@@ -9,7 +9,7 @@ by <em><a href="r.unpack.html">r.unpack</a></em>.
 <h2>NOTES</h2>
 
 Name of the pack file is determined by default from <b>input</b>
-parameter. Optionaly the name can be given by <b>output</b> parameter.
+parameter. Optionally the name can be given by <b>output</b> parameter.
 
 Currently only 2D raster maps are supported.
 
