--- a/scripts/r.unpack/r.unpack.html
+++ b/scripts/r.unpack/r.unpack.html
@@ -5,7 +5,7 @@
 <h2>NOTES</h2>
 
 Name of the raster map is determined by default from pack file
-internals. Optionaly the name can be given by <b>output</b> parameter.
+internals. Optionally the name can be given by <b>output</b> parameter.
 
 Currently only 2D raster maps are supported.
 
