--- a/scripts/v.krige/v.krige.html
+++ b/scripts/v.krige/v.krige.html
@@ -163,12 +163,12 @@ R package gstat and will be part of a future v.krige release.
 <h2>SEE ALSO</h2>
 
 R package <a href="http://cran.r-project.org/web/packages/gstat/index.html">gstat</a>,
-mantained by Edzer J. Pebesma and others
+maintained by Edzer J. Pebesma and others
 <br>
 
 R
 package <a href="http://cran.r-project.org/web/packages/spgrass6/index.html">spgrass6</a>,
-mantained by Roger Bivand
+maintained by Roger Bivand
 <br>
 
 The <a href="http://grasswiki.osgeo.org/wiki/R_statistics">Short
