--- a/scripts/v.pack/v.pack.html
+++ b/scripts/v.pack/v.pack.html
@@ -10,7 +10,7 @@ by <em><a href="v.unpack.html">v.unpack</a></em>.
 <h2>NOTES</h2>
 
 Name of the pack file is determined by default from <b>input</b>
-parameter. Optionaly the name can be given by <b>output</b> parameter.
+parameter. Optionally the name can be given by <b>output</b> parameter.
 
 
 <h2>EXAMPLE</h2>
