--- a/scripts/v.unpack/v.unpack.html
+++ b/scripts/v.unpack/v.unpack.html
@@ -5,7 +5,7 @@
 <h2>NOTES</h2>
 
 Name of the vector map is determined by default from pack file
-internals. Optionaly the name can be given by <b>output</b> parameter.
+internals. Optionally the name can be given by <b>output</b> parameter.
 
 <h2>EXAMPLE</h2>
 
