--- a/scripts/g.extension/testsuite/data/sample_modules/r.plus.example/r.plus.example.html
+++ b/scripts/g.extension/testsuite/data/sample_modules/r.plus.example/r.plus.example.html
@@ -22,4 +22,4 @@ r.plus.example
 Vaclav Petras, NCSU OSGeoREL<br>
 
 <p>
-<i>Last changed: $Date: 2015-06-07 07:21:31 -0400 (Sun, 07 Jun 2015) $</i>
+<i>Last changed: $Date$</i>
