--- a/temporal/t.rast.contour/t.rast.contour.html
+++ b/temporal/t.rast.contour/t.rast.contour.html
@@ -40,4 +40,4 @@ chosen steps or contour levels are not present in the raster map layers.
 
 S&ouml;ren Gebbert, Geoinformatikb&uuml;ro Dassau
 
-<p><i>Last changed: $Date: 2014-12-03 20:39:26 +0100 (Mi, 03. Dez 2014) $</i>
+<p><i>Last changed: $Date$</i>
