--- a/temporal/t.rast.to.vect/t.rast.to.vect.html
+++ b/temporal/t.rast.to.vect/t.rast.to.vect.html
@@ -39,4 +39,4 @@ raster map layers should be converted into vector map layers.
 
 S&ouml;ren Gebbert, Geoinformatikb&uuml;ro Dassau
 
-<p><i>Last changed: $Date: 2014-12-03 20:39:26 +0100 (Mi, 03. Dez 2014) $</i>
+<p><i>Last changed: $Date$</i>
