--- a/temporal/t.rast.what/t.rast.what.html
+++ b/temporal/t.rast.what/t.rast.what.html
@@ -130,4 +130,4 @@ x|y|1990-03-01 00:00:00;1990-04-01 00:00:00|1990-04-01 00:00:00;1990-05-01 00:00
 
 S&ouml;ren Gebbert, Th&uuml;nen Institute of Climate-Smart Agriculture
 
-<p><i>Last changed: $Date: 2014-12-03 20:39:26 +0100 (Mi, 03. Dez 2014) $</i>
+<p><i>Last changed: $Date$</i>
