--- a/vector/v.lidar.growing/v.lidar.growing.html
+++ b/vector/v.lidar.growing/v.lidar.growing.html
@@ -50,9 +50,12 @@ v.lidar.growing input=edge output=growing first=firstpulse
 <h2>SEE ALSO</h2>
 
 <em>
-<a HREF="v.lidar.edgedetection.html">v.lidar.edgedetection</a>,
-<a HREF="v.lidar.correction.html">v.lidar.correction</a>,
-<a HREF="v.surf.bspline.html">v.surf.bspline</a>
+<a href="v.lidar.edgedetection.html">v.lidar.edgedetection</a>,
+<a href="v.lidar.correction.html">v.lidar.correction</a>,
+<a href="v.surf.bspline.html">v.surf.bspline</a>,
+<a href="v.surf.rst.html">v.surf.rst</a>,
+<a href="v.in.lidar.html">v.in.lidar</a>,
+<a href="v.in.ascii.html">v.in.ascii</a>
 </em>
 
 <h2>AUTHOR</h2>
