--- a/vector/v.lidar.correction/v.lidar.correction.html
+++ b/vector/v.lidar.correction/v.lidar.correction.html
@@ -57,7 +57,7 @@ v.lidar.correction input=growing output=correction out_terrain=only_terrain
 
 <h3>Second correction procedure</h3>
 <div class="code"><pre>
-v.lidar.correction input=correction output=correction_bis out_terrain=only_terrain_bis
+v.lidar.correction input=correction output=correction_bis terrain=only_terrain_bis
 </pre></div>
 
 
@@ -66,7 +66,10 @@ v.lidar.correction input=correction output=correction_bis out_terrain=only_terra
 <em>
 <a href="v.lidar.edgedetection.html">v.lidar.edgedetection</a>,
 <a href="v.lidar.growing.html">v.lidar.growing</a>,
-<a href="v.surf.bspline.html">v.surf.bspline</a>
+<a href="v.surf.bspline.html">v.surf.bspline</a>,
+<a href="v.surf.rst.html">v.surf.rst</a>,
+<a href="v.in.lidar.html">v.in.lidar</a>,
+<a href="v.in.ascii.html">v.in.ascii</a>
 </em>
 
 
