r.watershed manual: mention 'depression' parameter properly
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@66169 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/raster/r.watershed/front/r.watershed.html
+++ b/raster/r.watershed/front/r.watershed.html
@@ -59,7 +59,8 @@ avoid distortions.  The elevation map need not be sink-filled because
 the module uses a least-cost algorithm.
 
 <p>
-Map of actual depressions or sinkholes in the landscape that are large
+Option <b>depression</b> specifies the optional map of actual
+depressions or sinkholes in the landscape that are large
 enough to slow and store surface runoff from a storm event.  All cells
 that are not NULL and not zero indicate depressions. Water will flow
 into but not out of depressions.
