r.proj, v.proj manuals: references updated
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@66172 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/raster/r.proj/r.proj.html
+++ b/raster/r.proj/r.proj.html
@@ -281,16 +281,17 @@ location=source_location_name mapset=PERMANENT res=5 method=bicubic
     Springer-Verlag, Berlin, 2nd edition.
 </ol>
 
-<p><a href="http://proj.osgeo.org">PROJ.4</a>: Projection/datum support
-library.
+<a href="http://trac.osgeo.org/proj/">PROJ 4</a>: Projection/datum support library.
 
-<p>  <b>Further reading</b>
+<p>
+<b>Further reading</b>
 <ul>
   <li> <a href="http://www.asprs.org/Grids-Datums.html">ASPRS Grids and Datum</a>
   <li> <a href="http://www.remotesensing.org/geotiff/proj_list/">Projections Transform List</a> (PROJ.4)
   <li> <a href="http://www.mapref.org">MapRef -
       The Collection of Map Projections and Reference Systems for Europe</a> 
   <li> <a href="http://www.crs-geo.eu">Information and Service System for European Coordinate Reference Systems - CRS</a>
+  <li> <a href="http://www.progonos.com/furuti/MapProj/Normal/TOC/cartTOC.html">Cartographical Map Projections</a> by Carlos A. Furuti
 </ul>
 
 <h2>SEE ALSO</h2>
