--- a/vector/v.proj/v.proj.html
+++ b/vector/v.proj/v.proj.html
@@ -49,23 +49,36 @@ v.proj in=mymap location=latlong mapset=user1
 
 <h2>REFERENCES</h2>
 
+<ol>
+  <li> Evenden, G.I.  (1990) <a href="http://proj.osgeo.org">Cartographic
+      projection procedures for the UNIX environment - a user's manual.</a>
+    USGS Open-File Report 90-284 (OF90-284.pdf)
+    See also there: Interim Report and 2nd Interim Report on Release 4, Evenden 1994).
+  <li> Richards, John A. (1993), Remote Sensing Digital Image Analysis,
+    Springer-Verlag, Berlin, 2nd edition.
+</ol>
+
 <a href="http://trac.osgeo.org/proj/">PROJ 4</a>: Projection/datum support library.
 
 <p>
 <b>Further reading</b>
 <ul>
-<li> <a href="http://www.asprs.org/Grids-Datums.html">ASPRS Grids and Datum</a>
-<li> <a href="http://www.mapref.org">MapRef - The Collection of Map Projections and Reference Systems for Europe</a>
-<li> <a href="http://www.remotesensing.org/geotiff/proj_list/">Projections Transform List</a> (PROJ4)
+  <li> <a href="http://www.asprs.org/Grids-Datums.html">ASPRS Grids and Datum</a>
+  <li> <a href="http://www.remotesensing.org/geotiff/proj_list/">Projections Transform List</a> (PROJ.4)
+  <li> <a href="http://www.mapref.org">MapRef -
+      The Collection of Map Projections and Reference Systems for Europe</a> 
+  <li> <a href="http://www.crs-geo.eu">Information and Service System for European Coordinate Reference Systems - CRS</a>
+  <li> <a href="http://www.progonos.com/furuti/MapProj/Normal/TOC/cartTOC.html">Cartographical Map Projections</a> by Carlos A. Furuti
 </ul>
 
 <h2>SEE ALSO</h2>
 
 <em>
 <a href="r.proj.html">r.proj</a>,
+<a href="m.proj.html">m.proj</a>,
 <a href="g.proj.html">g.proj</a>,
-<a href="i.rectify.html">i.rectify</a>,  
-<a href="r.stats.html">r.stats</a>,  
+<a href="i.rectify.html">i.rectify</a>,
+<a href="r.stats.html">r.stats</a>,
 <a href="v.sample.html">v.sample</a>,
 <a href="v.split.html">v.split</a>,
 <a href="v.surf.idw.html">v.surf.idw</a>,
